# synthetic-open-schema

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  justfile
.github/workflows/: ci.yml
examples/: browser-check.yaml  dns-check.yaml  http-check.yaml  ssl-check.yaml  tcp-check.yaml
schemas/: v1beta1.json
scripts/: dump_schemas.py
src/: pyproject.toml  pytest.ini
src/synthetic_open_schema_model/: base.py
src/synthetic_open_schema_model/v1beta1/: __init__.py  dns.py  http.py  playwright.py  ssl.py  tcp.py
src/tests/: test_base.py  test_dns.py  test_examples.py  test_http.py  test_playwright.py  test_ssl.py  test_tcp.py
